--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["johannst <johannes.stoelp@gmail.com>"]
 edition = "2018"
 default-run = "aoc2020"
 
-#[lib]
-#name = "aoc20"
-#path = "src/lib.rs"
+[lib]
+name = "aoc20"
+path = "src/lib.rs"
 
 [dependencies]
